<resources>
    <string name="app_name">Exercise - Securities</string>
    <!-- Fragment Titles -->
    <string name="home_fragment_label">Home</string>
    <string name="second_fragment_label">All Securities</string>
    <string name="detail_fragment_label">Security Detail</string>
    <!-- Buttons -->
    <string name="view_all">View All</string>
    <string name="previous">Previous</string>

    <!-- Card Titles -->
    <string name="top_securities">Top Securities</string>
    <string name="fav_securities">Favorite Securities</string>

    <string name="loading_security_summaries_error">Error while loading security summaries</string>
    <string name="loading_security_detail_error">Error while loading security detail</string>
    <string name="set_favorite_error">Error while changing favorite</string>

    <string name="security_summary_title">%s options</string>
    <string name="security_summary_issue_date">Held since %s</string>

    <string name="security_detail_option_granted">%d Options Granted</string>

    <string name="fully_vested">Fully Vested</string>
    <string name="vesting">Vesting</string>

    <string name="add_favorite">Add Favorite</string>
    <string name="add_favorite_dialog_message">Would you like to favorite security %s</string>

    <string name="vested">vested</string>
    <string name="unvested">unvested</string>

    <string name="options">%d options</string>
</resources>
